# homework-33

1/: 1.cpp  CMakeLists.txt
2/: 2.cpp  CMakeLists.txt
3/: 3.cpp  CMakeLists.txt  Новый текстовый документ.txt
4/: 4.cpp  CMakeLists.txt
