# CMakeList.txt: проект CMake для 2; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

project ("2")

# Добавьте источник в исполняемый файл этого проекта.
add_executable (2 "2.cpp" )

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
